--- a/kaius/TODO
+++ b/kaius/TODO
@@ -1,29 +1,28 @@
 Capes missing:
 BLU CDC
 BST Pet MACC
-DRK FC
 
 Capes missing Dye:
 
-RUN x
+BLM Death
+RUN --
 BST TP
 BST WS
 MNK TP
 NIN TP
-RDM TP
 RNG TP
 RNG Crit
-PLD x
-
-Capes missing Resin:
-COR-LS
+PLD --
 COR-Crit
+
 
 Capes All (for now) DONE:
 WAR
 WHM
 BLM
+RDM
 THF
+BRD
 DRK
 SAM
 DRG
