--- a/kaius/TODO
+++ b/kaius/TODO
@@ -1,6 +1,5 @@
 Capes missing:
 DRG Crit WS
-BLU Cure Cape
 BLU TANK
 BLU Idle
 BLU CDC
@@ -14,11 +13,10 @@ BST TP
 BST WS
 MNK TP
 NIN TP
-RNG TP
-RNG Crit
 PLD --
 COR-Crit
-
+BLU-Cure
+WHM-DW
 
 Capes All (for now) DONE:
 WAR
