--- a/kaius/TODO
+++ b/kaius/TODO
@@ -2,7 +2,7 @@ Capes missing:
 BLU TANK
 BLU Idle
 BLU CDC
-BST Pet MACC
+
 
 Capes missing Dye:
 
@@ -10,8 +10,9 @@ BLM Death
 BST TP
 BST WS
 NIN TP
+DNC Evis
+DNC Pyrrich
 PLD --
-COR-Crit
 BLU-Cure
 WHM-DW
 
